# OpenWanderary

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists copy.txt  CMakeLists.txt  LICENSE  Makefile  README.md  build_3rdpary.sh  requirements.txt  setup.py  test_math.py
cmake/: add_test.cmake  convert_protos.cmake  pack_3rdparty.cmake  py-config.yaml  wdr-config.cmake.in
config/: stat_yolov8_large_images_time_cfg.yaml  stat_yolov8_large_images_time_inputs.yaml  stat_yolov8_time_cfg.yaml  stat_yolov8_time_inputs.yaml
examples/: CMakeLists.txt  README.md  infer_yolov5.cpp
examples/BPU/: CMakeLists.txt  infer-dcmt.cpp  infer-unet.cpp  infer-yolov5.cpp  infer_demo.cpp  infer_fcos.cpp  infer_unet.cpp  infer_unet.py  infer_unet_standalong.cpp  inter_unet_standalong.cpp  print-infos.cpp  validate-infer.cpp
examples/Blog/: CMakeLists.txt  eigen-auto-inverse.cpp
examples/MIPI/: show_2way_camera.py  write_cam_images.py
examples/dnn/: CMakeLists.txt  stat-dnn-time-consumption.cpp
include/: common.h
include/YOLO/: yolov5.h
projects/torchdnn/: README.md  convert_images.py  network_inference.py  network_trainer.py  options.py
projects/torchdnn/data/: README.md
projects/torchdnn/dataloaders/: dataload.py
projects/torchdnn/demos/: README.md
projects/torchdnn/demos/DCMT/: running_on_X3.py
projects/torchdnn/demos/DCMT/lib/models/: model_deploy.py
projects/torchdnn/demos/DCMT/lib/tracker/: dcmt_deploy.py
projects/torchdnn/demos/DCMT/lib/utils/: deploy_helper.py
projects/torchdnn/demos/unet/: README.md  check_bin_onboard.py  check_cpp_onboard.py  check_float_onnx.py  check_onnx_funs.py  check_wdr_onboard.py  detect.py  detect_bin.py  detect_onnx.py  detect_quantized_onnx.py  detect_torch.py  prepare_calibratedata.py  prepare_functions.py  torch2onnx.py  unet_prepare_calibratedata.py  unet_testonnx.py  unet_testquantizedonnx.py  unet_torch.py  unet_torch2onnx.py
projects/torchdnn/networks/: unet.py
python/: README.md
python/wanderary/: visualization.py
scripts/: generate_filelist.py
src/: common.cpp
src/YOLO/: yolov5.cpp
tests/: CMakeLists.txt
tests/python/: CMakeLists.txt  common.py  test_wdr_apps.py  test_wdr_data_loader.py  test_wdr_dnn.py  test_wdr_media.py  test_wdr_process_base.py  test_wdr_utils.py
tests/test_data/apps/: yolov8_config.json
tests/test_data/dnn/: yolov8n_detect_bayese_640x640_nv12_properties.json
tests/test_data/models/: download_models.sh
tests/test_data/process/: yolov8_gt_box2ds.json
tests/test_data/tiny_coco/: type_names.json  val_names.txt
tests/test_data/utils/: street_box2d_gt.json
tests/wanderary/: CMakeLists.txt
tests/wanderary/apps/: CMakeLists.txt  test_yolov8.cpp
tests/wanderary/data_loader/: CMakeLists.txt  test_base_loader.cpp
tests/wanderary/dnn/: CMakeLists.txt  test_bpu_infer.cpp
tests/wanderary/io/: CMakeLists.txt  test_mcap_io.cpp
tests/wanderary/media/: CMakeLists.txt  test_codec.cpp
tests/wanderary/process/: CMakeLists.txt  test_postprocessors.cpp  test_preprocessors.cpp  test_processor_base.cpp
tests/wanderary/utils/: CMakeLists.txt  test_common.cpp  test_convertor.cpp  test_file_io.cpp  test_math.cpp  test_path.cpp  test_time_manager.cpp
tools/: construct_calibration_files.py  waymo_dataset_to_foxglove.py
wanderary/: CMakeLists.txt
wanderary/Algorithms/: CMakeLists.txt  dcmt.cpp  tracker.cpp  tracker.h
wanderary/BPU/: BpuMats.cpp  CMakeLists.txt  bpu.cpp  bpu.h  bpuinfos.cpp  nets.cpp  postproc.cpp  preproc.cpp  preproc.h
wanderary/Core/: CMakeLists.txt  argparse.cpp  basic.cpp  core.h  logs.cpp  math.h  path.cpp  transmat.cpp
wanderary/DNN/: CMakeLists.txt  postproc.cpp  postproc.h  preproc.cpp  preproc.h
wanderary/apps/: CMakeLists.txt  yolo.cpp  yolo.h
wanderary/common/: color_conversion.h
wanderary/data_loader/: CMakeLists.txt  base_dataset.cpp  base_dataset.h  data_loader.cpp  data_loader.h  data_manager.h
wanderary/data_loader/datasets/: simple_image_set.cpp  simple_image_set.h
wanderary/dnn/: CMakeLists.txt  bpu_core.cpp  bpu_core.h  bpu_nets.cpp  bpu_nets.h
wanderary/evaluation/: CMakeLists.txt
wanderary/io/: CMakeLists.txt  mcap_reader.cpp  mcap_reader.h  mcap_writer.cpp  mcap_writer.h
wanderary/io/impl/: mcap_writer.hpp
wanderary/io/msg_convertor/: foxglove.cpp  foxglove.h  open_waymo_dataset.cpp  open_waymo_dataset.h  protobuf.cpp  protobuf.h
wanderary/media/: CMakeLists.txt  codec_base.cpp  codec_base.h  codec_context.cpp  codec_descriptor.cpp  codec_jpg.cpp  codec_jpg.h  media_codec.cpp  media_codec.h  media_error.h
wanderary/process/: CMakeLists.txt  process_base.cpp  process_base.h  process_utils.cpp  process_utils.h
wanderary/process/processors/: convert_yolo_feature.cpp  convert_yolo_feature.h  format_image.cpp  format_image.h
wanderary/python/: CMakeLists.txt  apps.cpp  data_loader.cpp  dnn.cpp  io.cpp  media.cpp  process.cpp  py_main.cpp  structs.cpp  testing.cpp  utils.cpp  visualization.cpp  wdr.cpp  wdr.h
wanderary/python/impl/: wdr.hpp
wanderary/schemas/: CMakeLists.txt
wanderary/schemas/tensorflow/: example.proto  feature.proto
wanderary/structs/: CMakeLists.txt  box.cpp  box.h  enums.h  frame.cpp  frame.h  meta_structs.cpp
wanderary/testing/: CMakeLists.txt  data_checking.cpp  data_checking.h  data_convertor.cpp  data_convertor.h
wanderary/testing/impl/: data_checking.hpp
wanderary/utils/: CMakeLists.txt  class_registry.h  common_utils.cpp  common_utils.h  convertor.cpp  convertor.h  enum_traits.h  file_io.cpp  file_io.h  json_utils.cpp  json_utils.h  math_utils.h  path.cpp  path.h  time_manager.cpp  time_manager.h  yaml_utils.cpp  yaml_utils.h
wanderary/utils/impl/: file_io.hpp  json_utils.hpp  math_utils.hpp  yaml_utils.hpp
wanderary/visualization/: CMakeLists.txt  color_mcap.cpp  color_mcap.h  draw_boxes.cpp  draw_boxes.h
